--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@ node_modules
 client/build/
 client/.env
 client/node_modules
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
